Add initial support for HTTP Putting server
Add initial support for host an HTTP server that integrates with
alleexx's python opencv putting tool (https://github.com/alleexx/cam-putting-py).

--- a/settings.json
+++ b/settings.json
@@ -20,5 +20,9 @@
     "temperature": 60, // fahrenheit 
     "airDensity": 1.225, // kg/m^3
     "teeDistanceInFeet": 7 // distance from R10 to ball in feet
+  },
+  "putting": {
+    "enabled": true,
+    "port": 8888
   }
 }
